Improved message store system Improved onChatMessages system to work instantly instead of using a timeout Fixed a bunch of listeners that were not getting invoked because only the non-whatsapp covariant was being called Removed pretty printing from JSON(must have introduced it by mistake) Added GZIP compression for session files, reduced file size by 80% Fixed chat messages deserializer, provided an explanation in the source file Moved exceptions to exception package(not exported)